--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,5 +37,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyC10dM1z3pVy8I7Ix7XjQ9m9vzOVuZlz9I"/>
+
     </application>
 </manifest>
