--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   animated_splash_screen: ^1.1.0
   google_fonts: 2.1.0
   http: ^0.13.4
+  dio: ^4.0.0
+  flutter_polyline_points: ^0.2.6
+  google_maps_flutter: ^2.0.2
+
 
 dev_dependencies:
   flutter_test:
